# qstopwatch

./: CMakeLists.txt  Main.qml  README.md  main.cpp  mainwindow.cpp  mainwindow.ui  qdemo.pro  stopwatch.cpp  stopwatch.h
